@startuml
'https://plantuml.com/class-diagram



class Main
class User
class Application

class User{
-string password
-string userName

+User(String password, String userName)
+String setPassword(String password)
+String setUserName(String userName)
}

class Application{
-List <User> listOfUsers
+ void createUser(String password, String userName)
+ boolean passwordValidator(String password)
}

Main <-- Application
Application <-- User

@enduml